force-app/main/default/objects/Opportunity/fields/Active_Tasks_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Tasks_Count__c</fullName>
    <label>Active Tasks Count</label>
    <summaryForeignKey>Opportunity_Task__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>