force-app/main/default/objects/Opportunity/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process 1</fullName>
            </value>
            <value>
                <fullName>Process 2</fullName>
            </value>
            <value>
                <fullName>Process 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>