force-app/main/default/objects/Opportunity/fields/Process_Locked__c.field-meta.xml
<CustomField>
    <fullName>Process_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Locked</label>
    <type>Checkbox</type>
</CustomField>