force-app/main/default/objects/Opportunity/validationRules/Block_Process_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Process_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Process__c),
    Active_Tasks_Count__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Can&apos;t change the current process while task(s) exist.</errorMessage>
</ValidationRule>